# knowledge_mining_agent

./: .gitignore  BIBLE.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  Ouroboros.spec  README.md  VERSION  bootstrap.py  build.sh  build_linux.sh  build_windows.ps1  launcher.py  pyproject.toml  requirements.txt  server.py  wiki-config.toml.example
assets/: icon.icns
devtools/: README.md  (+1 more)
synthadoc/: .gitignore  README-pypi.md  README.md  pyproject.toml  skills-lock.json
synthadoc/.github/workflows/: publish.yml
synthadoc/docs/: badges.json  design.md  user-quick-start-guide.md
synthadoc/docs/example/aquaflow/: README.md
synthadoc/docs/example/aquaflow/raw_sources/: 01_aquaflow_company_profile.md  02_water_infrastructure_market.md  03_lbo_model_mechanics.md  04_covenant_analysis_framework.md  05_quality_of_earnings_guide.md  06_esg_due_diligence_standards.md  07_legal_due_diligence_process.md  08_exit_valuation_benchmarks.md
synthadoc/docs/media/: README.md  medium.md  youtube.md
synthadoc/obsidian-plugin/: esbuild.config.mjs  package-lock.json  package.json  vitest.config.ts  vitest.integration.config.ts
synthadoc/obsidian-plugin/src/: api.integration.test.ts  api.ts  main.ts
synthadoc/scripts/: bump_version.py  prepare_pypi_readme.py  sync_plugin.py  sync_web_ui.py  update_badges.py
synthadoc/synthadoc/: __init__.py  config.py
synthadoc/synthadoc/agents/: action_agent.py  citations.py  context_agent.py  export_agent.py  hints.json  ingest_agent.py  query_agent.py  rewrite_agent.py  scaffold_agent.py  search_decompose_agent.py  summarize_agent.py
synthadoc/synthadoc/cli/: _http.py  _init.py  _wiki.py  audit.py  backup.py  cache.py  candidates.py  context.py  demo.py  export.py  ingest.py  install.py  lifecycle.py  lint.py  main.py  plugin.py  query.py  routing.py  scaffold.py  schedule.py  serve.py  status.py
synthadoc/synthadoc/core/: backup_engine.py  context_budget.py  logging_config.py  orchestrator.py  queue.py  sanitizer.py
synthadoc/synthadoc/data/obsidian-plugin/: manifest.json
synthadoc/synthadoc/demos/ai-research/: README.md  _generate_raw_sources.py  sources.txt
synthadoc/synthadoc/demos/ai-research/raw_sources/public-domain/: andrej-karpathy-biography.txt  attention-mechanisms.txt  geoffrey-hinton-biography.txt  large-language-models.txt  llm-benchmarks-overview.txt  reinforcement-learning-from-human-feedback.txt  scaling-laws.txt  training-techniques.txt  transformer-architecture.txt
synthadoc/synthadoc/demos/ai-research/wiki/: andrej-karpathy.md  attention-mechanisms.md  dashboard.md  early-neural-networks.md  geoffrey-hinton.md  large-language-models.md  llm-benchmarks.md  reinforcement-learning-from-human-feedback.md  scaling-laws.md  training-techniques.md  transformer-architecture.md
synthadoc/synthadoc/demos/history-of-computing/: README.md
synthadoc/synthadoc/demos/history-of-computing/raw_sources/public-domain/: ceruzzi-history-modern-computing.txt  hopper-biography-usn.txt  leiner-brief-history-internet-2009.txt  mccorduck-machines-who-think.txt  raymond-cathedral-bazaar-1999.txt  riordan-hoddeson-crystal-fire.txt  ritchie-unix-history-1979.txt  turing-wikipedia-cc0.txt  vonneumann-firstdraft-1945.txt  wexelblat-history-of-programming-languages-1981.txt
synthadoc/synthadoc/demos/history-of-computing/wiki/: alan-turing.md  artificial-intelligence-history.md  dashboard.md  grace-hopper.md  internet-origins.md  mechanical-computing.md  open-source-movement.md  personal-computer-revolution.md  programming-languages-overview.md  transistor-and-microchip.md  unix-history.md  von-neumann-architecture.md
synthadoc/synthadoc/integration/: http_server.py  mcp_server.py
synthadoc/synthadoc/knowledge/: synthadoc-export-guide.md  synthadoc-ingest-guide.md  synthadoc-lifecycle.md  synthadoc-lint-guide.md  synthadoc-overview.md  synthadoc-schedule-guide.md
synthadoc/synthadoc/observability/: telemetry.py
synthadoc/synthadoc/providers/: __init__.py  anthropic.py  ollama.py  openai.py
synthadoc/synthadoc/skills/pdf/scripts/: main.py
synthadoc/synthadoc/storage/: search.py  wiki.py
synthadoc/tests/: test_audit_db.py  test_audit_lifecycle.py  test_config.py  test_context_budget.py  test_coverage_boost.py  test_demo_sync.py  test_export_agent.py  test_http_export.py  test_http_lifecycle.py  test_http_sessions.py  test_ingest_agent.py  test_ingest_lifecycle.py  test_lifecycle_cli.py  test_lint_agent.py  test_lint_lifecycle.py  test_lint_lifecycle_url.py  test_query_agent.py  test_sanitizer.py  test_schedule.py  test_source_ref.py
synthadoc/tests/agents/: test_action_agent.py  test_lint_report_feature.py  test_query_agent.py  test_query_stream.py  test_rewrite_agent.py  test_scaffold_agent.py  test_search_decompose_agent.py  test_summarize_agent.py
synthadoc/tests/cli/: test_cli.py  test_cli_commands.py  test_demo.py  test_demo_sync.py  test_export_cli.py  test_install_port.py  test_jobs_cli.py  test_lint_cli.py  test_logo.py  test_plugin.py  test_plugin_cli.py  test_query_cli.py  test_scaffold_cli.py  test_schedule_cli.py  test_serve.py  test_wiki_resolution.py
synthadoc/tests/core/: test_backup_engine.py  test_orchestrator.py  test_orchestrator_cost.py  test_queue.py  test_scheduler.py
synthadoc/tests/integration/: okf_consumer_agent.py  test_http_api.py  test_mcp_server.py  test_sse_endpoint.py
synthadoc/tests/live/: README.md  live_cli_test.py  live_mcp_test.py  live_plugin_test.py  run_all.py
synthadoc/tests/performance/: test_citation_perf.py  test_performance.py  test_query_cache_perf.py
synthadoc/tests/providers/: test_streaming.py
synthadoc/tests/skills/: test_pdf_skill.py  test_skills.py
synthadoc/tests/storage/: test_db_schema_version.py  test_log.py  test_search.py  test_wiki.py
synthadoc/web-ui/: package-lock.json  package.json  vite.config.ts
synthadoc/web-ui/src/: App.tsx  index.css  jobStatus.ts  useQueryStream.ts  useSession.ts  useSessions.ts
synthadoc/web-ui/src/components/: ChatWindow.tsx  GraphSidebar.tsx  GraphView.tsx  MessageBubble.test.ts  MessageBubble.tsx  SettingsPopover.tsx
(+802 files in other folders)
